cmake_minimum_required(VERSION 3.28)
project(untitled)

set(CMAKE_CXX_STANDARD 17)

add_executable(A A.cpp)
add_executable(untitled Problem486A.cpp)
add_executable(ProblemA ProblemA.cpp)
add_executable(ProblemB ProblemB.cpp)
add_executable(Problem200B Problem200B.cpp)
add_executable(Problem61A Problem61A.cpp)
add_executable(Problem228A Problem228A.cpp)
add_executable(Problem1989C Problem1989C.cpp)
add_executable(Problem705A Problem705A.cpp)
add_executable(Problem1328A Problem1328A.cpp)
add_executable(Problem469A Problem469A.cpp)
add_executable(Problem502A Problem502A.cpp)
add_executable(Problem144A Problem144A.cpp)
add_executable(Problem148A Problem148A.cpp)
add_executable(Problem996A Problem996A.cpp)
add_executable(Problem443A Problem443A.cpp)
add_executable(Problem785A Problem785A.cpp)
add_executable(Problem268A Problem268A.cpp)
add_executable(Problem1335A Problem1335A.cpp)
add_executable(Problem141A Problem141A.cpp)
add_executable(Problem510A Problem510A.cpp)
add_executable(Problem1352A Problem1352A.cpp)
add_executable(Problem427A Problem427A.cpp)
add_executable(Problem723A Problem723A.cpp)
add_executable(Problem750A Problem750A.cpp)
add_executable(Problem155A Problem155A.cpp)
