cmake_minimum_required(VERSION 3.28)
project(untitled)

set(CMAKE_CXX_STANDARD 17)

add_executable(A A.cpp)
add_executable(untitled Problem486A.cpp)
add_executable(ProblemA ProblemA.cpp)
add_executable(ProblemB ProblemB.cpp)
add_executable(Problem200B Problem200B.cpp)
add_executable(Problem61A Problem61A.cpp)
add_executable(Problem228A Problem228A.cpp)
add_executable(Problem1989C Problem1989C.cpp)
add_executable(Problem705A Problem705A.cpp)
add_executable(Problem1328A Problem1328A.cpp)
add_executable(Problem469A Problem469A.cpp)
add_executable(Problem502A Problem502A.cpp)
add_executable(Problem144A Problem144A.cpp)
add_executable(Problem148A Problem148A.cpp)
add_executable(Problem996A Problem996A.cpp)
add_executable(Problem443A Problem443A.cpp)
add_executable(Problem785A Problem785A.cpp)
add_executable(Problem268A Problem268A.cpp)
add_executable(Problem1335A Problem1335A.cpp)
add_executable(Problem141A Problem141A.cpp)
add_executable(Problem510A Problem510A.cpp)
add_executable(Problem1352A Problem1352A.cpp)
add_executable(Problem427A Problem427A.cpp)
add_executable(Problem723A Problem723A.cpp)
add_executable(Problem750A Problem750A.cpp)
add_executable(Problem155A Problem155A.cpp)
add_executable(Problem731A Problem731A.cpp)
add_executable(Problem581A Problem581A.cpp)
add_executable(Problem151A Problem151A.cpp)
add_executable(Problem1154A Problem1154A.cpp)
add_executable(Problem1742A Problem1742A.cpp)
add_executable(Problem1703A Problem1703A.cpp)
add_executable(Problem1984A Problem1984A.cpp)
add_executable(Problem1986A Problem1986A.cpp)
add_executable(Problem1985D Problem1985D.cpp)
add_executable(Problem1399A Problem1399A.cpp)
add_executable(Problem136A Problem136A.cpp)
add_executable(Problem266B Problem266B.cpp)
add_executable(Problem630A Problem630A.cpp)
add_executable(Problem1409A Problem1409A.cpp)
add_executable(Problem381A Problem381A.cpp)
add_executable(Problem1692A Problem1692A.cpp)
add_executable(Problem1512A Problem1512A.cpp)
add_executable(Problem32B Problem32B.cpp)
add_executable(Problem1676A Problem1676A.cpp)
add_executable(Problem1669A Problem1669A.cpp)
add_executable(Problem758A Problem758A.cpp)
add_executable(Problem1807A Problem1807A.cpp)
add_executable(Problem472A Problem472A.cpp)
add_executable(Problem432A Problem432A.cpp)
add_executable(Problem1560A Problem1560A.cpp)
add_executable(Problem1791A Problem1791A.cpp)
add_executable(Problem490A Problem490A.cpp)
add_executable(Problem1367A Problem1367A.cpp)
add_executable(Problem1760A Problem1760A.cpp)
add_executable(Problem703A Problem703A.cpp)
